--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,13 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": "^5.3 | ^7.0"
+        "php": "^5.3 | ^7.0",
+        "rebelcode/module-interface": "dev-develop",
+        "rebelcode/module-loader": "dev-develop",
+        "rebelcode/module-iterator-abstract": "dev-develop",
+        "rebelcode/module-locator": "dev-develop",
+        "rebelcode/module-config-interface": "dev-develop",
+        "rebelcode/module-config-validator": "dev-develop"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
@@ -23,5 +29,31 @@
         "psr-4": {
             "RebelCode\\Modular\\": "src"
         }
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/RebelCodecom/module-interface"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/RebelCodecom/module-config-validator"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/RebelCodecom/module-config-interface"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/RebelCodecom/module-loader"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/RebelCodecom/module-iterator-abstract"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/Dhii/machine-loop-machine"
+        }
+    ]
 }
