Added composer scripts for convenience

--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,10 @@
             "RebelCode\\Modular\\": "src"
         }
     },
+    "scripts": {
+        "test": "phpunit",
+        "csfix": "php-cs-fixer fix -vvv"
+    },
     "repositories": [
         {
             "type": "vcs",
