--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,10 @@
         "rebelcode/module-iterator-abstract": "dev-develop",
         "rebelcode/module-locator": "dev-develop",
         "rebelcode/module-config-interface": "dev-develop",
-        "rebelcode/module-config-validator": "dev-develop"
+        "rebelcode/module-config-validator": "dev-develop",
+        "dhii/data-key-value-aware-trait": "dev-task/initial-traits",
+        "dhii/callback-aware-trait": "dev-task/initial-traits",
+        "dhii/config-aware-trait": "dev-task/initial-traits"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
@@ -58,6 +61,18 @@
         {
             "type": "vcs",
             "url": "https://github.com/Dhii/machine-loop-machine"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/Dhii/data-key-value-aware-trait"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/Dhii/callback-aware-trait"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/Dhii/config-aware-trait"
         }
     ]
 }
