--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "phpunit/phpunit": "^4.8",
         "ptrofimov/xpmock": "^1.1",
         "dhii/php-cs-fixer-config": "dev-php-5.3",
-        "codeclimate/php-test-reporter": "<=0.3.2"
+        "codeclimate/php-test-reporter": "<=0.3.2",
+        "mikey179/vfsStream": "^1.6@dev"
     },
     "autoload": {
         "psr-4": {
