--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 /test/coverage/
 /test/log/
 /build/
+/.idea/dictionaries/
+/.idea/codeStyles/
+/.idea/codeStylesConfig.xml
+/.idea/workspace.xml
+/.idea/deployment.xml
+/.idea/vagrant.xml
+/.idea/misc.xml
