--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,15 @@
         "php": "^5.4 | ^7.0",
         "psr/container": "^1.0",
         "dhii/module-interface": "^0.1",
+        "dhii/factory-interface": "dev-develop",
         "rebelcode/module-iterator-abstract": "dev-task/5_update-latest-improvements",
+        "dhii/file-finder-abstract": "dev-task/create-finder",
+        "dhii/data-key-value-aware-abstract": "0.1-alpha4",
         "dhii/iterator-helper-base": "0.1-alpha1",
         "dhii/exception-helper-base": "0.1-alpha2",
-        "dhii/i18n-helper-base": "^0.1",
-        "dhii/data-key-value-aware-trait": "dev-task/initial-traits",
-        "dhii/factory-interface": "dev-develop",
-        "dhii/file-finder-abstract": "dev-task/create-finder"
+        "dhii/normalization-helper-base": "0.1-alpha2",
+        "dhii/container-helper-base": "0.1-alpha5",
+        "dhii/i18n-helper-base": "^0.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
