--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "rebelcode/module-iterator-abstract": "dev-task/5_update-latest-improvements",
         "dhii/file-finder-abstract": "dev-task/create-finder",
         "dhii/data-key-value-aware-abstract": "0.1-alpha4",
-        "dhii/iterator-helper-base": "0.1-alpha1",
+        "dhii/iterator-helper-base": "dev-release/0.1-alpha2",
         "dhii/exception-helper-base": "0.1-alpha2",
         "dhii/normalization-helper-base": "0.1-alpha2",
         "dhii/container-helper-base": "0.1-alpha5",
