Added helper functionality to `AbstractBaseModule`
- Added container factory awareness
- Added container creation functionality
- Added config file loading functionality

--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,11 @@
         "rebelcode/module-iterator-abstract": "dev-task/5_update-latest-improvements",
         "dhii/file-finder-abstract": "dev-task/create-finder",
         "dhii/data-key-value-aware-abstract": "0.1-alpha4",
+        "dhii/callback-abstract": "^0.1-alpha1",
         "dhii/iterator-helper-base": "dev-release/0.1-alpha2",
         "dhii/exception-helper-base": "0.1-alpha2",
         "dhii/normalization-helper-base": "0.1-alpha2",
+        "dhii/data-container-interface": "dev-task/13_add-container-factory-interface",
         "dhii/container-helper-base": "0.1-alpha5",
         "dhii/i18n-helper-base": "^0.1"
     },
