Updated dependency versions

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "dhii/iterator-helper-base": "^0.1-alpha2",
         "dhii/exception-helper-base": "0.1-alpha2",
         "dhii/normalization-helper-base": "0.1-alpha2",
-        "dhii/data-container-interface": "dev-task/13_add-container-factory-interface",
+        "dhii/data-container-interface": "0.2.x-dev",
         "dhii/container-helper-base": "0.1-alpha5",
         "dhii/i18n-helper-base": "^0.1"
     },
