--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "psr/container": "^1.0",
         "dhii/module-interface": "^0.1",
         "dhii/factory-interface": "0.1-alpha2",
+        "dhii/wp-events": "dev-task/wip-refactoring",
         "rebelcode/module-iterator-abstract": "dev-task/5_update-latest-improvements",
         "dhii/file-finder-abstract": "dev-task/create-finder",
         "dhii/data-key-value-aware-abstract": "0.1-alpha4",
