--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,10 @@
         "php": "^5.4 | ^7.0",
         "psr/container": "^1.0",
         "dhii/module-interface": "^0.1",
-        "dhii/factory-interface": "0.1-alpha2",
+        "dhii/factory-interface": "^0.1-alpha2",
+        "dhii/factory-base": "^0.1-alpha1",
         "dhii/wp-events": "dev-task/wip-refactoring",
+        "dhii/event-interface": "^0.2-alpha1",
         "rebelcode/module-iterator-abstract": "dev-task/5_update-latest-improvements",
         "dhii/file-finder-abstract": "dev-task/create-finder",
         "dhii/data-key-value-aware-abstract": "0.1-alpha4",
