--- a/composer.json
+++ b/composer.json
@@ -14,22 +14,23 @@
     "require": {
         "php": "^5.4 | ^7.0",
         "psr/container": "^1.0",
+        "rebelcode/module-iterator-abstract": "dev-task/5_update-latest-improvements",
         "dhii/module-interface": "^0.1",
         "dhii/factory-interface": "^0.1-alpha2",
         "dhii/factory-base": "^0.1-alpha3",
         "dhii/wp-events": "dev-task/wip-refactoring",
         "dhii/event-interface": "^0.2-alpha1",
-        "rebelcode/module-iterator-abstract": "dev-task/5_update-latest-improvements",
         "dhii/file-finder-abstract": "dev-task/create-finder",
         "dhii/data-key-value-aware-abstract": "^0.1-alpha4",
         "dhii/callback-abstract": "^0.1-alpha1",
         "dhii/iterator-helper-base": "^0.1-alpha2",
         "dhii/exception": "^0.1-alpha4",
         "dhii/normalization-helper-base": "^0.1-alpha2",
-        "dhii/data-container-interface": "0.2.x-dev",
+        "dhii/data-container-interface": "^0.2-alpha3",
         "dhii/container-helper-base": "^0.1-alpha5",
         "dhii/i18n-helper-base": "^0.1",
-        "dhii/collections-interface": "^0.2-alpha4"
+        "dhii/collections-interface": "^0.2-alpha4",
+        "dhii/config-interface": "^0.2-alpha2"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
