--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,13 @@
     "require": {
         "php": "^5.4 | ^7.0",
         "psr/container": "^1.0",
-        "rebelcode/module-iterator-abstract": "dev-task/5_update-latest-improvements",
+        "rebelcode/module-iterator-abstract": "^0.1-alpha1",
         "dhii/module-interface": "^0.1",
         "dhii/factory-interface": "^0.1-alpha2",
         "dhii/factory-base": "^0.1-alpha3",
-        "dhii/wp-events": "dev-task/wip-refactoring",
+        "dhii/wp-events": "^0.3-alpha1",
         "dhii/event-interface": "^0.2-alpha1",
-        "dhii/file-finder-abstract": "dev-task/create-finder",
+        "dhii/file-finder-abstract": "^0.1-alpha1",
         "dhii/data-key-value-aware-abstract": "^0.1-alpha4",
         "dhii/callback-abstract": "^0.1-alpha1",
         "dhii/iterator-helper-base": "^0.1-alpha2",
