Organized and removed unnecessary dependencies

--- a/composer.json
+++ b/composer.json
@@ -18,21 +18,17 @@
         "rebelcode/module-iterator-abstract": "^0.1-alpha1",
         "dhii/module-interface": "^0.1",
         "dhii/factory-interface": "^0.1-alpha2",
-        "dhii/config": "^0.1-alpha2",
-        "dhii/factory-base": "^0.1-alpha3",
-        "dhii/wp-events": "^0.3-alpha1",
         "dhii/event-interface": "^0.2-alpha1",
+        "dhii/data-container-interface": "^0.2-alpha3",
+        "dhii/config-interface": "^0.2-alpha2",
+        "dhii/collections-interface": "^0.2-alpha4",
         "dhii/file-finder-abstract": "^0.1-alpha1",
         "dhii/data-key-value-aware-abstract": "^0.1-alpha4",
-        "dhii/callback-abstract": "^0.1-alpha1",
         "dhii/iterator-helper-base": "^0.1-alpha2",
-        "dhii/exception": "^0.1-alpha4",
         "dhii/normalization-helper-base": "^0.1-alpha2",
-        "dhii/data-container-interface": "^0.2-alpha3",
         "dhii/container-helper-base": "^0.1-alpha5",
         "dhii/i18n-helper-base": "^0.1",
-        "dhii/collections-interface": "^0.2-alpha4",
-        "dhii/config-interface": "^0.2-alpha2"
+        "dhii/exception": "^0.1-alpha4"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
